# systemd-daemon-rs

./: Cargo.toml
examples/: simple_daemon.rs
examples/simple_daemon_tokio/: mod.rs
examples/simple_daemon_tokio_core/: mod.rs
src/: error.rs  lib.rs  systemd_notifier.rs  timer.rs
