[package]
name = "systemd-daemon"
version = "0.1.0"
authors = ["Thomas Bächler <thomas@archlinux.org>"]

[dependencies]
libsystemd = "0.0"
timerfd = "1.0"
futures = "0.1"
mio = "0.6"
tokio = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }

[features]
default = ["tokio"]
